--- a/package.json
+++ b/package.json
@@ -5,67 +5,21 @@
   "author": "Mondo <568197478@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --display-modules --sort-modules-by size --profile --json > stats.json",
-    "dev:server": "node server/app.js",
-    "start": "npm run dev && npm run dev:server"
+    "dev": "nodemon app.js"
   },
   "dependencies": {
-    "axios": "^0.18.1",
-    "babel-polyfill": "^6.26.0",
-    "element-ui": "^2.0.11",
-    "leancloud-storage": "^2.5.0",
-    "koa": "^2.4.1",
-    "koa-router": "^7.3.0",
-    "mysql": "^2.15.0",
-    "qs": "^6.5.1",
-    "vue-directive-touch": "^1.0.9",
-    "vue-lazyload": "^1.0.6",
-    "vue": "^2.4.4",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.0"
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-jwt": "^3.6.0",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^8.0.8",
+    "koa-static": "^5.0.0",
+    "koa2-history-api-fallback": "^0.1.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.4",
-    "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-component": "^1.1.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "bcryptjs": "^2.4.3",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "cssnano": "^3.10.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.4",
-    "font-awesome": "^4.7.0",
-    "fs": "0.0.1-security",
-    "highlight.js": "^9.12.0",
-    "html-webpack-plugin": "^2.30.1",
-    "js-cookie": "^2.1.4",
-    "jsonwebtoken": "^8.1.1",
-    "koa-bodyparser": "^4.2.0",
-    "koa-jwt": "^3.3.0",
-    "koa-logger": "^3.1.0",
-    "koa-static": "^4.0.2",
-    "koa2-history-api-fallback": "0.0.5",
-    "less": "^3.0.0-alpha.3",
-    "less-loader": "^4.0.5",
-    "marked": "^0.3.6",
-    "nprogress": "^0.2.0",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.1.0",
-    "style-loader": "^0.19.0",
-    "vue-loader": "^13.0.5",
-    "vue-style-loader": "^3.1.2",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^3.1.11",
-    "webpack-merge": "^4.1.1",
-    "webpack-node-externals": "^1.6.0"
+    "nodemon": "^2.0.2"
   }
 }
